# samsungproject

app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  custom_monado_runtime.cpp  main.cpp
app/src/main/java/com/example/androidsamsung/: MainActivity.java
